src/assets/global.css
/* Reset básico de estilo */
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Reset de borda e padding para elementos block */
body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, figure, dl, dd {
  margin: 0;
  padding: 0;
}

/* Definição padrão para lista */
ul, ol {
  list-style: none;
  padding: 0;
  margin: 0;
}

/* Reset de elementos de formulário */
button, input, textarea, select {
  font: inherit;
  margin: 0;
  padding: 0;
  border: none;
  background: none;
  color: inherit;
}

/* Remover a decoração padrão dos links */
a {
  text-decoration: none;
  color: inherit;
}

/* Reset para tabelas */
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* Definir altura mínima para o body */
html, body {
  height: 100%;
  width: 100%;
  font-family: sans-serif;
  line-height: 1.5;
}

/* Imagens e elementos multimídia */
img, video, canvas {
  max-width: 100%;
  display: block;
}

/* Estilos globais adicionais */
section {
    padding: 64px 0;
}

h1, h2, h3, h4, h5, h6, p, span {
    text-align: start;
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--title-font);
  font-weight: 700;
}

h1 {
  font-size: var(--heading-first-font-size);
}

h2 {
  font-size: var(--heading-second-font-size);
}

h3 {
  font-size: var(--heading-third-font-size);
}


p, span {
  font-family: var(--text-font);
  font-size: var(--text-font-size);
}

.title {
    color: var(--primary-color);
    margin-bottom: 16px;
}

.subtitle {
    color: var(--secondary-color);
    font-weight: 400;
    margin-bottom: 16px;
}

@media screen and (min-width: 1024px) {
    .only-mobile {
        display: none !important;
    } 
}

@media screen and (max-width: 1023px) {
    .only-desktop {
        display: none !important;
    }
}

